syntax = "proto3";
package trips;
import "google/protobuf/timestamp.proto";
option go_package = "./internal/pkg/trips/delivery/grpc/gen/;gen"; 
service Trips {
    rpc CreateTrip(CreateTripRequest) returns (EmptyResponse);
    rpc UpdateTrip(UpdateTripRequest) returns (EmptyResponse);
    rpc DeleteTrip(DeleteTripRequest) returns (EmptyResponse);
    rpc GetTripsByUserID(GetTripsByUserIDRequest) returns (GetTripsByUserIDResponse);
    rpc GetTrip(GetTripRequest) returns (GetTripResponse);
    rpc AddPlaceToTrip(AddPlaceToTripRequest) returns (EmptyResponse);   
    rpc AddPhotosToTrip(AddPhotosToTripRequest) returns (AddPhotosToTripResponse);
    rpc DeletePhotoFromTrip(DeletePhotoRequest) returns (EmptyResponse);
    rpc CreateSharingLink(CreateSharingLinkRequest) returns (CreateSharingLinkResponse);
    rpc GetSharingToken(GetSharingTokenRequest) returns (GetSharingTokenResponse);
    rpc GetTripBySharingToken(GetTripBySharingTokenRequest) returns (GetTripBySharingTokenResponse);
    rpc AddUserToTrip(AddUserToTripRequest) returns (EmptyResponse);
    rpc GetSharingOption(GetSharingOptionRequest) returns (GetSharingOptionResponse);
}

message CreateTripRequest {
    Trip trip = 1;
}

message UpdateTripRequest {
    Trip trip = 1;
}

message DeleteTripRequest {
    uint32 id = 1;
}

message GetTripsByUserIDRequest {
    uint32 user_id = 1;
    int32 limit = 2;
    int32 offset = 3;
}

message GetTripsByUserIDResponse {
    repeated Trip trips = 1;
}

message GetTripRequest {
    uint32 trip_id = 1;
}

message GetTripResponse {
    Trip trip = 1;
    repeated UserProfile users = 2;
}

message AddPlaceToTripRequest {
    uint32 trip_id = 1;
    uint32 place_id = 2;
}

message AddPhotosToTripRequest {
    uint32 trip_id = 1;         
    repeated string photos = 2; 
}

message AddPhotosToTripResponse {
    repeated Photo photos = 2;  
}

message Photo {
    string photoPath = 1; 
}
message DeletePhotoRequest {
    uint32 trip_id = 1;     
    string photo_path = 2;  
}

message CreateSharingLinkRequest {
    uint32 trip_id = 1;
    string token = 2;
    string sharing_option = 3;
}

message CreateSharingLinkResponse {
    string token = 1;
}

message GetSharingTokenRequest {
    uint32 trip_id = 1;
}

message GetSharingTokenResponse {
    Token token = 1;
}

message GetTripBySharingTokenRequest {
    string token = 1;
}

message GetTripBySharingTokenResponse {
    Trip trip = 1;
    repeated UserProfile users = 2;
}

message AddUserToTripRequest {
    uint32 trip_id = 1;
    uint32 user_id = 2;
}

message GetSharingOptionRequest {
    uint32 trip_id = 1;
    uint32 user_id = 2;
}

message GetSharingOptionResponse {
    string sharing_option = 1;
}

message EmptyResponse {}

message Trip {
    uint32 id = 1;
    uint32 user_id = 2;
    string name = 3;
    string description = 4;
    uint32 city_id = 5;
    string start_date = 6;
    string end_date = 7;
    bool private = 8;
    repeated string photos = 9; 
    google.protobuf.Timestamp created_at = 10;
}

message Token {
    uint32 id = 1;
    uint32 trip_id = 2;
    string token = 3;
    string sharing_option = 4;
    google.protobuf.Timestamp expires_at = 5;
    google.protobuf.Timestamp created_at = 6;
}

message UserProfile {
    string login = 1;
    string email = 2;
    string avatar_path = 3;
}
